[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Call of Ops Duty.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 87
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1025.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 1 )
text = "Platformer
"
align = 1
valign = 1

[node name="Label" type="Label" parent="Label"]
margin_left = 204.0
margin_top = 47.0
margin_right = 274.0
margin_bottom = 65.0
text = "(-Generic-)"

[node name="Start_easy" type="Button" parent="."]
margin_left = 372.0
margin_top = 238.0
margin_right = 459.0
margin_bottom = 292.0
text = "Easy"

[node name="Quit" type="Button" parent="."]
margin_left = 372.0
margin_top = 318.0
margin_right = 653.0
margin_bottom = 372.0
text = "Quit"

[node name="Start_Med" type="Button" parent="."]
margin_left = 468.0
margin_top = 238.0
margin_right = 555.0
margin_bottom = 292.0
text = "Med"

[node name="Start_Hard" type="Button" parent="."]
margin_left = 564.0
margin_top = 238.0
margin_right = 651.0
margin_bottom = 292.0
text = "Hard"

[node name="Description" type="Label" parent="."]
margin_left = 1.0
margin_top = 382.0
margin_right = 1023.0
margin_bottom = 601.0
text = "In this game your life is based on score, if you run out you lose.
difficulties decide your starting score
Controls
Left - a
right - d
jump - up or space
attack - e or left click
Pause - escape"
align = 1

[connection signal="pressed" from="Start_easy" to="." method="_on_Start_easy_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Start_Med" to="." method="_on_Start_Med_pressed"]
[connection signal="pressed" from="Start_Hard" to="." method="_on_Start_Hard_pressed"]
